Add Google Fonts for improved text styling
Added Google Fonts link for Poppins to enhance typography.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div class="container">
     <h1>How are you feeling today?</h1>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <select id="moodSelector" onchange="recommendSongs()">
       
       <option value="">Select a mood</option>
@@ -25,4 +26,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
